Declarar la cobertura opcional del reparto de centros de coste y aceptar el hueco que deja un borrado (#54)
Un reparto es imputacion analitica, no un requisito legal ni del calculo, y
mil de mil tres empleados no lo tienen: la cobertura obligatoria era una
regla inventada en una tabla (ADR-057, decision 1). Con OPTIONAL los huecos
dejan de bloquear, los solapes siguen prohibidos y borrar un tramo de en
medio se acepta y deja el hueco; borrar el ultimo sigue reabriendo el
anterior. Los tests que afirmaban el rechazo por hueco afirman ahora la
aceptacion, con el hueco nombrado en el plan, y el contrato deja de prometer
COST_CENTER_COVERAGE_GAP en los endpoints. Primera serie con la variante
debil del componente.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01VuE48exQbKXZKCXWHuxU9r